Comment resource values
Add comments to resource values.

--- a/app/src/main/res/values-sw720dp/dimens.xml
+++ b/app/src/main/res/values-sw720dp/dimens.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!-- Modified dimensions for screens with a smallest width of 720 dpi -->
+
 <resources>
     <dimen name="dimSpacing">20dp</dimen>
     <dimen name="dimTextSizeDaysUntil">20dp</dimen>
