--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Default dimensions for the widget -->
+
 <resources>
     <dimen name="dimTextSizeNumber">40dp</dimen>
     <dimen name="dimTextSizeDaysUntil">10dp</dimen>
